[package]
name = "genalg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
parallel = ["dep:rayon"]

[dependencies]
bitvec = "1.0.1"
csv = "1.2.1"
decorum = "0.3.1"
num = "0.4.0"
num-traits = "0.2.15"
rand = "0.8.5"
rayon = { version = "1.7.0", optional = true }
