[package]
name = "genalg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
drop_graphs = []

[dependencies]
arrayvec = "0.7.2"
bitvec = "1.0.1"
color-eyre = "0.6.2"
csv-async = { version = "1.2.6", features = ["tokio"] }
decorum = "0.3.1"
eyre = "0.6.8"
futures = "0.3.28"
image = "0.24.6"
indicatif = "0.17.3"
num = "0.4.0"
num-traits = "0.2.15"
once_cell = "1.17.1"
plotters = "0.3.4"
rand = "0.8.5"
rayon = "1.7.0"
tokio = { version = "1.27.0", features = ["full"] }
